--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,9 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css?family=Coda');
+
+* {
+    font-family: 'Coda', sans-serif
+}
